Fix parts of speach correctness function, redesign progress bar for parts of speach (add overflow).

--- a/src/shared/ui/ProgressBar/ui/ProgressBar.module.scss
+++ b/src/shared/ui/ProgressBar/ui/ProgressBar.module.scss
@@ -21,9 +21,25 @@
       border-radius: 10px 0 0 10px;
     }
 
-    &__full {
+    &__100 {
       &::-webkit-progress-value {
         border-radius: 10px;
+      }
+    }
+
+    &__canOverflow {
+      border-radius: 10px 0 0 10px;
+    }
+
+    &__overflow {
+      border: none;
+      width: 20%;
+      position: absolute;
+      z-index: var(--z-index-hidden);
+      right: 10px;
+
+      &::-webkit-progress-value {
+        border-radius: 0;
       }
     }
   }
